--- a/libft/Makefile
+++ b/libft/Makefile
@@ -27,7 +27,9 @@ SRCS =        ./ft_atoi.c                    \
             ./ft_strnstr.c                \
             ./ft_strrchr.c                \
             ./ft_tolower.c                \
-            ./ft_toupper.c
+            ./ft_toupper.c					\
+			./ft_substr.c					\
+			./ft_strjoin.c
 BOBJS =        ${BSRCS:.c=.o}
 BSRCS :=     ${SRCS}
 all: ${NAME}
